# Adafruit-Raspberry-DHT

./: .gitignore  CMakeLists.txt  DHT.py  Makefile  README.md  crt.sh  dht22.c  dht22.cpp  dht22.h  dht22.pro  piio.c  piio.cpp  piio.h  rmv.sh
DHT_Driver/: main.py  pi_dht_read.c  pi_dht_read.h
DjangoSite/: my.wsgi  start.sh
DjangoSite/DjangoSite/: DHT.py  settings.py  urls.py  views.py  wsgi.py
DjangoSite/media/css/: style-narrower.css  style.css
DjangoSite/media/js/: init.js
DjangoSite/templates/: index.html
dht-driver/: Makefile  pi_dht_read.c  pi_dht_read.h
examples/: DHT.py  example1.py  example2.py  example3.py  start_weather.sh  test.py  weather.py
source/: _Raspberry_Pi_Driver.c
